# Project-Akhir

Project-Akhir-main/: teller_bank.sql
Project-Akhir-main/projectAkhir/: teller bank 2 (1).drawio
Project-Akhir-main/projectAkhir/Basdat/: CMakeLists.txt.user.ffb025c  history.h  history.ui  login.h  login.ui  mainwindow.h  mainwindow.ui  register.cpp  register.ui  report.cpp  report.h  report.ui  showbankname.h  showbankname.ui  transfer.cpp  transfer.h  transfer.ui
Project-Akhir-main/projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: build.ninja
Project-Akhir-main/projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/: mocs_compilation.cpp
Project-Akhir-main/projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/EWIEGA46WW/: moc_history.cpp  moc_login.cpp  moc_showbankname.cpp  moc_transfer.cpp.d
Project-Akhir-main/projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/include/: ui_history.h  ui_mainwindow.h  ui_transfer.h
projectAkhir/: Bank.drawio  teller bank 2 (1).drawio
projectAkhir/Basdat/: CMakeLists.txt  CMakeLists.txt.user.63f17cc  history.cpp  history.ui  login.cpp  login.ui  main.cpp  mainwindow.cpp  mainwindow.ui  register.cpp  register.h  register.ui  report.ui  report.ui.autosave  showbankname.cpp  transfer.cpp  transfer.h  transfer.ui  transfer.ui.autosave
projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/: deps  mocs_compilation.cpp
projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/EWIEGA46WW/: moc_history.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_register.cpp  moc_register.cpp.d  moc_report.cpp  moc_report.cpp.d  moc_showbankname.cpp.d  moc_transfer.cpp  moc_transfer.cpp.d
projectAkhir/build-Basdat-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Basdat_autogen/include/: ui_history.h  ui_login.h  ui_mainwindow.h  ui_register.h  ui_report.h  ui_showbankname.h  ui_transfer.h
